--- a/references.bib
+++ b/references.bib
@@ -59,3 +59,106 @@
 	pages={3111--3119},
 	year={2013}
 }
+
+
+@article{luong2015effective,
+	title={Effective approaches to attention-based neural machine translation},
+	author={Luong, Minh-Thang and Pham, Hieu and Manning, Christopher D},
+	journal={arXiv preprint arXiv:1508.04025},
+	year={2015}
+}
+
+@inproceedings{xu2015show,
+	title={Show, attend and tell: Neural image caption generation with visual attention},
+	author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+	booktitle={International conference on machine learning},
+	pages={2048--2057},
+	year={2015}
+}
+
+@article{bahdanau2014neural,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014}
+}
+
+@article{artetxe2018robust,
+	title={A robust self-learning method for fully unsupervised cross-lingual mappings of word embeddings},
+	author={Artetxe, Mikel and Labaka, Gorka and Agirre, Eneko},
+	journal={arXiv preprint arXiv:1805.06297},
+	year={2018}
+}
+
+@article{mikolov2013efficient,
+	title={Efficient estimation of word representations in vector space},
+	author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+	journal={arXiv preprint arXiv:1301.3781},
+	year={2013}
+}
+
+
+@inproceedings{mikolov2013distributed,
+	title={Distributed representations of words and phrases and their compositionality},
+	author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+	booktitle={Advances in neural information processing systems},
+	pages={3111--3119},
+	year={2013}
+}
+
+
+@inproceedings{pennington2014glove,
+	title={Glove: Global vectors for word representation},
+	author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+	booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+	pages={1532--1543},
+	year={2014}
+}
+
+
+@article{bojanowski2016enriching,
+	title={Enriching word vectors with subword information},
+	author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+	journal={arXiv preprint arXiv:1607.04606},
+	year={2016}
+}
+
+@article{ruder2017survey,
+	title={A survey of cross-lingual word embedding models},
+	author={Ruder, Sebastian and Vuli{\'c}, Ivan and S{\o}gaard, Anders},
+	journal={arXiv preprint arXiv:1706.04902},
+	year={2017}
+}
+
+@article{mikolov2013exploiting,
+	title={Exploiting similarities among languages for machine translation},
+	author={Mikolov, Tomas and Le, Quoc V and Sutskever, Ilya},
+	journal={arXiv preprint arXiv:1309.4168},
+	year={2013}
+}
+
+@inproceedings{xing2015normalized,
+	title={Normalized word embedding and orthogonal transform for bilingual word translation},
+	author={Xing, Chao and Wang, Dong and Liu, Chao and Lin, Yiye},
+	booktitle={Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+	pages={1006--1011},
+	year={2015}
+}
+
+@inproceedings{zhang2017adversarial,
+	title={Adversarial training for unsupervised bilingual lexicon induction},
+	author={Zhang, Meng and Liu, Yang and Luan, Huanbo and Sun, Maosong},
+	booktitle={Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+	volume={1},
+	pages={1959--1970},
+	year={2017}
+}
+
+
+@inproceedings{cao2016distribution,
+	title={A distribution-based model to learn bilingual word embeddings},
+	author={Cao, Hailong and Zhao, Tiejun and Zhang, Shu and Meng, Yao},
+	booktitle={Proceedings of COLING 2016, the 26th International Conference on Computational Linguistics: Technical Papers},
+	pages={1818--1827},
+	year={2016}
+}
