--- a/thesis.tex
+++ b/thesis.tex
@@ -386,7 +386,7 @@ fill=white!20]
 \renewcommand*\chapterheadstartvskip{\vspace*{-5\topskip}} % the assurance needs more space, so move the title up with this
 \input{assurance}
 } 
-
+\graphicspath{ {./figures/} }
 \selectlanguage{british}
 \input{abstract}
 
