--- a/introduction.tex
+++ b/introduction.tex
@@ -31,6 +31,9 @@ Recently, \cite{artetxe2017learning} proposed an iterative method that align the
 \cite{conneau2017word} viewed the word translation task as a word retrieval task and find the nearest neighbor searching suffers from the hubness problem. They further proposed to use cross-domain similarity local scaling (CSLS) penalize the hubs and a validation criterion for unsupervised model selection.
 
 
+\subsection{Outline}
+
+
 
 
 
